# Bootcamp_Repository

./: .gitignore  Dockerfile  Dockerfile.mcp  Notes.txt  README.md  example.env  langgraph.json  pyproject.toml  sample_mcp_server.py  script_1.py  script_2.py  script_4.py  script_5.py  script_6.py  weather_agent-fastapi-server.py  weather_agent-langgraph-server.py
k8s/: deployment-mcp-server.yaml  deployment-weather-agent.yaml  kustomization.yaml  service-mcp-server.yaml  service-weather-agent.yaml
