[project]
name = "bootcamp-day1"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langfuse>=3.10.1",
    "fastapi[standard]>=0.124.4",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.9",
    "agentevals>=0.0.9",
    "fastmcp>=2.14.0",
]
